[package]
name = "lotide"
version = "0.17.0"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Federated forum server using ActivityPub"
repository = "https://sr.ht/~vpzom/lotide/"
keywords = ["activitypub", "federation", "forum"]
categories = ["web-programming"]
rust-version = "1.91.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["types", "vendor/activitystreams", "vendor/activitystreams-ext", "vendor/web-push"]

[features]
default = ["s3-storage"]
s3-storage = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
hyper1 = { package = "hyper", version = "1.10.1", features = ["client", "http1", "server"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "server", "tokio"] }
http-body-util = "0.1.3"
tokio-postgres = { version = "0.7.17", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1.52.3", features = ["macros", "sync", "fs", "process", "time", "rt-multi-thread"] }
trout = { path = "vendor/trout" }
deadpool-postgres = "0.14.1"
serde_json = "1.0.150"
futures = "0.3.32"
bcrypt = "0.19.1"
serde_derive = "1.0.228"
serde = "1.0.228"
uuid = { version = "1.23.2", features = ["v4"] }
headers = "0.4.1"
chrono = "0.4.45"
url = { version = "2.5.8", features = ["serde"] }
either = "1.16.0"
openssl = "0.10.80"
hancock = { path = "vendor/hancock" }
serde_urlencoded = "0.7.1"
mime = "0.3.17"
thiserror = "2.0.18"
async-trait = "0.1.89"
#postgres-types = { "0.2.9", features = ["uuid-1"] }
postgres-types = { version = "0.2.13", features = ["uuid-1"] }
lazy_static = "1.5.0"
http = "1.4.2"
fluent = "0.17.0"
fluent-langneg = "0.13.0"
unic-langid = { version = "0.9.6", features = ["macros"] }
activitystreams = "=0.8.0-alpha.25"
activitystreams-ext = "0.1.0-alpha.3"
fast_chemail = "0.9.6"
lettre = { version = "0.11.22", features = ["tokio1", "tokio1-native-tls"] }
rand = "0.9.2"
bs58 = "0.5.1"
bumpalo = "3.20.3"
tokio-util = { version = "0.7.18", features = ["codec"] }
henry = "0.2.0"
ammonia = "4.1.2"
base64 = "0.22.1"
pulldown-cmark = "0.13.4"
migrant_lib = { version = "0.34.0", features = ["d-postgres"] }
log = "0.4"
env_logger = "0.11"
v_htmlescape = "0.17.0"
config = { version = "0.15.23", default-features = false, features = ["ini"] }
clap = "4.6.1"
bytes = "1.11.1"
atom_syndication = "0.12.8"
lotide_types = { path = "./types" }
date_duration = "0.1.0"
web-push = { version = "0.11.0", default-features = false }
sha2 = "0.10.8"
aws-config = { version = "1.8.18", default-features = false, features = ["rt-tokio", "credentials-process"], optional = true }
aws-sdk-s3 = { version = "1.135.0", default-features = false, features = ["rustls", "http-1x", "rt-tokio", "sigv4a"], optional = true }
postgres-native-tls = "0.5.3"
native-tls = "0.2.18"
regex = "1.12.3"
serde_with = "3.21.0"
html5ever = "0.39.0"
markup5ever_rcdom = "0.39.0"
tokio-cron-scheduler = "0.15.1"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }

[dev-dependencies]
rand = "0.9.2"
portpicker = "0.1.1"

[build-dependencies]
fluent-syntax = "0.12.0"

[patch.crates-io]
activitystreams = { path = "vendor/activitystreams" }
activitystreams-ext = { path = "vendor/activitystreams-ext" }
web-push = { path = "vendor/web-push" }
tokio-postgres = { path = "vendor/tokio-postgres" }
