[package]
name = "lotide_types"
version = "0.0.0-pre"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Shared request and response types for Lotide"
repository = "https://sr.ht/~vpzom/lotide/"
readme = "../README.md"
keywords = ["activitypub", "federation", "forum"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.150"
serde_derive = "1.0.228"
serde = "1.0.228"
postgres-types = "0.2.13"
bytes = "1.11.1"
